# verb-form-generator

./: pyproject.toml
data/: layout_type_index.txt
data/paradigm_types/: აგზავნის.txt  ადებინებს.txt  ათბობს.txt  აკლებს.txt  ამთქნარებს.txt  არტყამს.txt  აქებს.txt  აშენებს.txt  აწვენს.txt  ბღავის.txt  ედრიკება.txt  ეზრდება.txt  ემთხვევა.txt  ენძრევა.txt  ერევა.txt  ერქმევა.txt  ერყევა.txt  ეწერება.txt  ეჭრება.txt  ზრდის.txt  თრთის.txt  იდრიკება.txt  იზრდება.txt  ინახავს.txt  ინძრევა.txt  ირევა.txt  ირყევა.txt  იძინებს.txt  იწერება.txt  იჭრება.txt  კეცავს.txt  კრავს.txt  ლოცულობს.txt  მოძრაობს.txt  ნანობს.txt  პატრონობს.txt  სესხულობს.txt  ყვინთავს.txt  ყვირის.txt  ჩურჩულებს.txt  (+7 more)
data/temp/: ა_აგზავნის_1.csv  ა_ადებინებს_1.csv  ა_ათბობს_1.csv  ა_აკლებს_1.csv  ა_ამთქნარებს_1.csv  ა_არტყამს_1.csv  ა_არწევს_1.csv  ა_აქებს_1.csv  ა_აშენებს_1.csv  ა_აწვენს_1.csv  ა_აჭერს_1.csv  ა_ბღავის_1.csv  ა_ეწერება_1.csv  ა_ზრდის_1.csv  ა_თრთის_1.csv  ა_ინახავს_1.csv  ა_ირევა_1.csv  ა_იძინებს_1.csv  ა_იწერება_1.csv  ა_კეცავს_1.csv  ა_კრავს_1.csv  ა_მოძრაობს_1.csv  ა_ნანობს_1.csv  ა_უთმენს_1.csv  ა_უჩქარებს_1.csv  ა_ყვინთავს_1.csv  ა_ყვირის_1.csv  ა_ჩურჩულებს_1.csv  ა_ჩქმეტს_1.csv  ა_ცეკვავს_1.csv  ა_ცრის_1.csv  ა_წერს_1.csv  ა_ჭამს_1.csv  ა_ხატავს_1.csv  ა_ჰკირკიტებს_1.csv  ათბობს_1.csv  აკლებს_1.csv  ამო_აგზავნის_1.csv  ამო_ადებინებს_1.csv  ამო_ათბობს_1.csv  (+802 more)
masters/: scraper.py  translations.py  verb_form_finder.py  verb_form_generator.py  verb_iterator.py
